[tool.poetry]
name = "aoc-2024"
version = "0.1.0"
description = ""
authors = ["Krista Smith <kristaj@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.2.0"
pandas = "^2.2.3"
networkx = "^3.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
